--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Engine3D/Engine3D/Engine3D.vcxproj.filters
 Engine3D/Engine3D/Engine3D.vcxproj.user
 Engine3D/Engine3D/x64/Release/Engine3D.exe.recipe
 /Engine3D/Engine3D/x64/Release
+/Engine3D/Engine3D/x64
